# mlibc-glibc-compat

./: LICENSE  README.md  config.h.in  meson.build  meson_options.txt  mlibcify.sh
src/: alias.cpp  caller.cpp  caller.hpp  chk.cpp  ctype.cpp  iconv.cpp  lfs64.cpp  misc.cpp  mlibc_thread.cpp  thread.cpp  utils.hpp
sysdeps/: sysdeps.hpp
sysdeps/linux/: generic.cpp
sysdeps/managarm/: generic.cpp  meson.build
